Fix passive shares being matched vs low price instead of close price

--- a/index.html
+++ b/index.html
@@ -1424,7 +1424,7 @@
             // Iterate over filtered stock data for calculations
             filteredStockData.forEach((data, index) => {
                 const dataDate = data.dateObj;
-                let price = data.lowPrice;
+                let price = data.price;
                 let action = 'Hold';
                 let sharesBought = 0;
                 let sharesSold = 0;
